fix: lighthouse errors but performance, update structure-detail layout

--- a/templates/common.html
+++ b/templates/common.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' ; style-src 'self' 'unsafe-inline';"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}Дом-Баня{% endblock %}</title>
   {% load static %}
@@ -23,7 +24,7 @@
 
   {% include "footer.html" %}
 
-  <script src="{% static 'js/burger/burger.js' %}"></script>
+  <script nonce="{{ CSP_NONCE }}" src="{% static 'js/burger/burger.js' %}"></script>
 
   {% block scripts %}
   {% endblock scripts %}
