--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
 <footer class="pageFooter">
 
   <div class="pageFooter__left">
-    <iframe class="pageFooter__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A1919007e4a7f1e4dc31d236cd17e9db5523542cb267827a728b8af519d90c464&amp;source=constructor" frameborder="0"></iframe>
+    <iframe class="pageFooter__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A1919007e4a7f1e4dc31d236cd17e9db5523542cb267827a728b8af519d90c464&amp;source=constructor" frameborder="0" title="Карта. Дом Баня, Москва 'Конструктор', МКАД 25-й км, Выставочный дом 1.8"></iframe>
   </div>
   <div class="pageFooter__right">
     <h2 class="heading heading--h2 heading--left heading--white heading--bold">Остались вопросы?</h2>
@@ -17,21 +17,24 @@
     <ul class="social pageFooter__social">
       <li class="social__item social__item--big">
         <a href="https://www.facebook.com/kirovdt">
-          <svg class="social__icon social__icon--fb" width="40" height="40">
+          Facebook
+          <svg class="social__icon social__icon--fb" width="40" height="40" alt="facebook logo">
             <use href="{% static 'img/sprite.svg' %}#icon-facebook"></use>
           </svg>
         </a>
       </li>
       <li class="social__item social__item--big">
         <a href="https://www.youtube.com/channel/UCoj58GpShlVhV-euDQdW_nQ">
-          <svg class="social__icon social__icon--yt" width="40" height="40">
+          YouTube
+          <svg class="social__icon social__icon--yt" width="40" height="40" alt="youtube logo">
             <use href="{% static 'img/sprite.svg' %}#icon-youtube"></use>
           </svg>
         </a>
       </li>
       <li class="social__item social__item--big">
         <a href="https://www.instagram.com/dom_banya_msk/">
-          <svg class="social__icon social__icon--insta" width="40" height="40">
+          Instagram
+          <svg class="social__icon social__icon--insta" width="40" height="40" alt="instagram logo">
             <use href="{% static 'img/sprite.svg' %}#icon-instagram"></use>
           </svg>
         </a>
