--- a/templates/header.html
+++ b/templates/header.html
@@ -13,21 +13,24 @@
       <li class="mainNav__item"><a href="/production/" class="mainNav__link">Производство</a></li>
       <li class="mainNav__item"><a href="/design/" class="mainNav__link">Проектирование</a></li>
       <li class="mainNav__item"><a href="/projects/" class="mainNav__link">Проекты</a></li>
-      <li class="mainNav__item mainNav__item--logo"><a href="/" class="mainNav__link"><img src="{% static 'img/logo.svg' %}" alt="" class="logo"></a></li>
+      <li class="mainNav__item mainNav__item--logo"><a href="/" class="mainNav__link"><img src="{% static 'img/logo.svg' %}" alt="ДомБаня лого" class="logo"></a></li>
     </ul>
     <div class="social">
       <a href="https://www.youtube.com/channel/UCoj58GpShlVhV-euDQdW_nQ" class="social__item">
-        <svg class="social__icon social__icon--yt" width="20" height="20">
+        YouTube
+        <svg class="social__icon social__icon--yt" width="20" height="20" alt="youtube logo">
           <use href="{% static 'img/sprite.svg' %}#icon-youtube"></use>
         </svg>
       </a>
       <a href="https://www.facebook.com/kirovdt" class="social__item">
-        <svg class="social__icon social__icon--fb" width="20" height="20">
+        Facebook
+        <svg class="social__icon social__icon--fb" width="20" height="20" alt="facebook logo">
           <use href="{% static 'img/sprite.svg' %}#icon-facebook"></use>
         </svg>
       </a>
       <a href="https://www.instagram.com/dom_banya_msk/" class="social__item">
-        <svg class="social__icon social__icon--insta" width="20" height="20">
+        Instagram
+        <svg class="social__icon social__icon--insta" width="20" height="20" alt="instagram logo">
           <use href="{% static 'img/sprite.svg' %}#icon-instagram"></use>
         </svg>
       </a>
