update: IndexView with sorted structures

--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
     <div class="burger">
       <div class="burger__element"></div>
     </div>
-    <a href="/" class="pageHeader__logoLink"><img src="{% static 'img/logo.svg' %}" width="150" height="47" alt="" class="logo pageHeader__logo"></a>
+    <a href="/" class="pageHeader__logoLink"><img src="{% static 'img/logo.svg' %}" width="150" height="47" alt="Дом-Баня лого" class="logo pageHeader__logo"></a>
   </div>
   <nav class="mainNav">
     <ul class="mainNav__list">
