--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 <section class="grid">
   <article class="grid__article">
     <div class="grid__element grid__element--wide grid__element--marginBottom-medium">
-      <h2 class="heading heading--h2">Наша команда</h2>
+      <h2 class="heading heading--h2 heading--bold heading--paddingBottom-5">Наша команда</h2>
       <p class="text text--center">Самая большая ценность &mdash; это люди.<br>Мы строим качественно.</p>
     </div>
     <div class="grid__element">
@@ -73,7 +73,7 @@
 <div class="hr"></div><section class="grid">
   <article class="grid__article">
     <div class="grid__element grid__element--wide">
-      <h2 class="heading heading--h2 heading--paddingBottom-50">Этапы работы с нами</h2>
+      <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Этапы работы с нами</h2>
       <ol class="list list--ordered">
         <li class="list__item list__item--ordered">
           <p class="text text--left text--bold">Консультация</p>
@@ -111,7 +111,7 @@
   <section class="grid">
     <article class="grid__article">
       <div class="grid__element grid__element--wide">
-        <h2 class="heading heading--h2 heading--paddingBottom-50">Наши последние работы</h2>
+        <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Наши последние работы</h2>
       </div>
     </article>
 
@@ -137,7 +137,7 @@
   <div class="hr"></div>
 
   <section class="content-slider">
-    <h2 class="heading heading--h2 heading--bold heading--center">
+    <h2 class="heading heading--h2 heading--bold heading--paddingTop-50 heading--center">
       Отзывы наших клиентов
     </h2>
     <div class="content-slider__control content-slider__control--quote content-slider__control-left"></div>
@@ -211,7 +211,7 @@
   <section class="grid">
     <article class="grid__article">
       <div class="grid__element grid__element--wide">
-        <h2 class="heading heading--h2">Наш YouTube канал</h2>
+        <h2 class="heading heading--h2 heading--bold">Наш YouTube канал</h2>
         <a class="" href="https://www.youtube.com/channel/UCoj58GpShlVhV-euDQdW_nQ" target="_blank" rel="noreferrer">
           <img src="{% static 'img/icons/icon-youtube-big.svg' %}" alt="youtube logo" class="img img--youtube">
         </a>
