--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -14,7 +14,7 @@
     <article class="content-slider__item promo promo--half content-slider__item--houses">
       <div class="promo__wrapper">
         <h1 class="heading heading--h1 heading--white">Дома из клееного бруса</h1>
-        <p class="content-slider__text text text--white">Мы успешно реализовали уже 11 проектов домов из клееного бруса.</p>
+        <p class="content-slider__text text text--white">Мы успешно реализовали уже {{house_count}} проектов домов из клееного бруса.</p>
         <div class="promo__buttons">
           <a href="#houses" class="button button--uppercase button--bold button--big">Смотреть все</a>
         </div>
@@ -23,7 +23,7 @@
     <article class="content-slider__item promo promo--half content-slider__item--projectsSmall">
       <div class="promo__wrapper">
         <h1 class="heading heading--h1 heading--white">Бани из клееного бруса</h1>
-        <p class="content-slider__text text text--white">Мы успешно реализовали уже 14 проектов бань из клееного бруса.
+        <p class="content-slider__text text text--white">Мы успешно реализовали уже {{sauna_count}} проектов бань из клееного бруса.
         </p>
         <div class="promo__buttons">
           <a href="#saunas" class="button button--uppercase button--bold button--big">Смотреть все</a>
